--- a/styles/base.css
+++ b/styles/base.css
@@ -78,11 +78,12 @@ header nav a:hover {
 
 .card p {
     margin-bottom: 1rem;
-    padding-right: 25px;
 }
 
 .card img {
-    width: 100px;
+    max-width: 150px;
+    height: auto;
+    padding: 25px;
 }
 
 .profile {
