--- a/styles/temples.css
+++ b/styles/temples.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color: #333;
+    --text-color: white;    
+}
+
 
 .image-grid {
     display: grid;
@@ -32,8 +37,8 @@ figcaption {
     padding-top: 10px;
 }
 header {
-    background-color: #333;
-    color: white;
+    background-color: var(--primary-color);
+    color: var(--text-color);
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -54,7 +59,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background-color: #333;
+    background-color: var(--primary-color);
 }
 
 .topnav #myLinks {
@@ -62,7 +67,7 @@ nav {
 }
 
 .topnav a {
-    color: white;
+    color: var(--text-color);
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
@@ -102,8 +107,8 @@ nav {
 
 /* Footer styles */
 footer {
-    background-color: #333;
-    color: white;
+    background-color: var(--primary-color);
+    color: var(--text-color);
     text-align: center;
     padding: 1rem;
     margin-top: auto;
