--- a/final-project/styles/styles-large.css
+++ b/final-project/styles/styles-large.css
@@ -5,6 +5,10 @@ body {
     background-color: #fff7e6;
     color: #333;
 }
+p{
+    padding: 5px 15px;
+    font-size: 1.2rem;
+}
 nav {
     background-color: #d46f4d;
     color: white;
@@ -12,8 +16,16 @@ nav {
     justify-content: center;
     padding: 15px 0;
 }
+
+nav a.active {
+    font-weight: bold;
+}
 .habitat-color{
     background-color: #337536;
+}
+.travel-color
+{
+    background-color: #9b6350;
 }
 nav a {
     color: white;
@@ -134,8 +146,8 @@ footer {
 }
 
 /* Travel */
-.travel-content
-{
+
+.travel-content {
     background: rgba(255, 255, 255, 0.9);
     padding-bottom: 50px;
     margin-top: 150px;
@@ -147,4 +159,30 @@ footer {
 
 .travel-content img{
     max-width: 470px;
+}
+
+.accommodation-img {
+    width: 100%; 
+    max-width: 470px !important; 
+    height: auto; 
+}
+
+.section.accomodation{
+    max-width: 500px !important;
+}
+
+#accommodation-title{
+    margin-top: 150px;
+    padding: 30px;
+    text-align: center;
+    font-size: 2rem;
+    background: rgba(255, 255, 255, 0.9);
+}
+
+.content.travel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
 }
